--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ",http://DmytroBorodin11.github.io/social_network",
+  "homepage": "http://DmytroBorodin11.github.io/social_network",
   "name": "social_v",
   "version": "0.1.0",
   "private": true,
